--- a/templates/Auction/index.html.twig
+++ b/templates/Auction/index.html.twig
@@ -4,7 +4,7 @@
     <h1>Auction list</h1>
 
     {% for auction in auctions %}
-        <h3>{{ auction.title }}</h3>
+        <h3><a href="{{ url("auction_details", {"id": auction.id}) }}">{{ auction.title }}</a></h3>
         <p>{{ auction.description }}</p>
         <p>{{ auction.price }}</p>
     {% endfor %}
