--- a/templates/Auction/details.html.twig
+++ b/templates/Auction/details.html.twig
@@ -1,5 +1,9 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    Details
+    <h1>{{ auction.title }}</h1>
+    <p>{{ auction.description }}</p>
+    <p>{{ auction.price }}</p>
+
+    <a href="{{ url("auction_index") }}">Go back</a>
 {% endblock %}
