--- a/templates/Auction/details.html.twig
+++ b/templates/Auction/details.html.twig
@@ -10,6 +10,8 @@
         </div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item">Price: {{ auction.price }} Euro</li>
+            <li class="list-group-item">Starting price: {{ auction.startingPrice }} Euro</li>
+            <li class="list-group-item">Auction end date: {{ auction.expiresAt | date("d.m.Y H:i:s") }}</li>
         </ul>
     </div>
     <a class="btn btn-light mt-3" href="{{ url("auction_index") }}">Go back</a>
