--- a/templates/Auction/details.html.twig
+++ b/templates/Auction/details.html.twig
@@ -15,4 +15,5 @@
         </ul>
     </div>
     <a class="btn btn-light mt-3" href="{{ url("auction_index") }}">Go back</a>
+    {{ form(deleteForm) }}
 {% endblock %}
