--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,8 +22,8 @@
         <div class="container">
             {% block body %}{% endblock %}
         </div>
-        <hr/>
-        <div class="container">
+        <div class="container-fluid fixed-bottom">
+            <hr/>
             <p class="text-center">Copyright 2019</p>
         </div>
 
