--- a/templates/Auction/details.html.twig
+++ b/templates/Auction/details.html.twig
@@ -31,6 +31,11 @@
             {{ form_widget(buyForm.submit, { "attr": {"class": "btn-success"}}) }}
             {{ form_rest(buyForm) }}
         {{ form_end(buyForm) }}
+
+    </div>
+    <div class="clearfix"></div>
+    <div class="container mt-5">
+        {{ form(bidForm) }}
     </div>
 
 {% endblock %}
