--- a/templates/Auction/details.html.twig
+++ b/templates/Auction/details.html.twig
@@ -14,6 +14,15 @@
             <li class="list-group-item">Auction end date: {{ auction.expiresAt | date("d.m.Y H:i:s") }}</li>
         </ul>
     </div>
+
+    <div class="card mt-3">
+        <ul class="list-group list-group-flush">
+            {% for offer in auction.offers %}
+                <li class="list-group-item">Offer: {{ offer.price }} Euro, submitted {{ offer.createdAt | date("d.m.Y H:i:s") }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+
     <div class="container mt-3 mb-5">
         <a class="btn btn-secondary float-left mr-2" href="{{ url("auction_index") }}">Go back</a>
         <a class="btn btn-info float-left mr-2" href="{{ url("auction_edit", {"id": auction.id}) }}">Edit</a>
@@ -33,9 +42,8 @@
         {{ form_end(buyForm) }}
 
     </div>
+
     <div class="clearfix"></div>
-    <div class="container mt-5">
-        {{ form(bidForm) }}
-    </div>
+    {{ form(bidForm, {"attr": {"class": "mt-5"}}) }}
 
 {% endblock %}
