Adding flash alerts for an users

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,19 @@
         </div>
         <hr/>
         <div class="container">
+            {% for message in app.flashes("success") %}
+                <div class="alert alert-success" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+
+            {% for message in app.flashes("error") %}
+                <div class="alert alert-danger" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+        <div class="container">
             {% block body %}{% endblock %}
         </div>
         <div class="container-fluid fixed-bottom">
