--- a/templates/Auction/details.html.twig
+++ b/templates/Auction/details.html.twig
@@ -44,6 +44,6 @@
     </div>
 
     <div class="clearfix"></div>
-    {{ form(bidForm, {"attr": {"class": "mt-5"}}) }}
+    {{ form(bidForm, {"attr": {"class": "mt-5", "novalidate": "novalidate"}}) }}
 
 {% endblock %}
