Creating MyAuction Controller, splitting views

--- a/templates/MyAuction/details.html.twig
+++ b/templates/MyAuction/details.html.twig
@@ -25,15 +25,17 @@
 
     <div class="container mt-3 mb-5">
         <a class="btn btn-secondary float-left mr-2" href="{{ url("auction_index") }}">Go back</a>
+        <a class="btn btn-info float-left mr-2" href="{{ url("auction_edit", {"id": auction.id}) }}">Edit</a>
+        {{ form_start(deleteForm, { "attr": {"class": "float-left"}}) }}
+        {{ form_widget(deleteForm.submit, { "attr": {"class": "btn-danger"}}) }}
+        {{ form_rest(deleteForm) }}
+        {{ form_end(deleteForm) }}
 
-        {{ form_start(buyForm, { "attr": {"class": "float-right mr-2"}}) }}
-            {{ form_widget(buyForm.submit, { "attr": {"class": "btn-success"}}) }}
-            {{ form_rest(buyForm) }}
-        {{ form_end(buyForm) }}
+        {{ form_start(finishForm, { "attr": {"class": "float-right"}}) }}
+        {{ form_widget(finishForm.submit, { "attr": {"class": "btn-dark"}}) }}
+        {{ form_rest(finishForm) }}
+        {{ form_end(finishForm) }}
 
     </div>
-
-    <div class="clearfix"></div>
-    {{ form(bidForm, {"attr": {"class": "mt-5", "novalidate": "novalidate"}}) }}
 
 {% endblock %}
