--- a/templates/MyAuction/details.html.twig
+++ b/templates/MyAuction/details.html.twig
@@ -25,7 +25,7 @@
 
     <div class="container mt-3 mb-5">
         <a class="btn btn-secondary float-left mr-2" href="{{ url("auction_index") }}">Go back</a>
-        <a class="btn btn-info float-left mr-2" href="{{ url("auction_edit", {"id": auction.id}) }}">Edit</a>
+        <a class="btn btn-info float-left mr-2" href="{{ url("my_auction_edit", {"id": auction.id}) }}">Edit</a>
         {{ form_start(deleteForm, { "attr": {"class": "float-left"}}) }}
         {{ form_widget(deleteForm.submit, { "attr": {"class": "btn-danger"}}) }}
         {{ form_rest(deleteForm) }}
