--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
                     <a class="nav-link active" href="{{ url("auction_index") }}">Auctions</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url("auction_add") }}">Add auction</a>
+                    <a class="nav-link" href="{{ url("my_auction_add") }}">Add auction</a>
                 </li>
             </ul>
         </div>
