Different menus for logged in and logged out users

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,14 +9,11 @@
     </head>
     <body>
         <div class="container" style="margin-top: 15px;">
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <a class="nav-link active" href="{{ url("auction_index") }}">Auctions</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url("my_auction_add") }}">Add auction</a>
-                </li>
-            </ul>
+            {% if is_granted("ROLE_USER") %}
+                {%  include("menuAuthenticated.html.twig") %}
+            {% else %}
+                {%  include("menuAnnonymous.html.twig") %}
+            {% endif %}
         </div>
         <hr/>
         <div class="container">
